refactor: fix PlayerMock message methods, improve WorldMock input validation, optimize test concurrency, and update test base classes.